# GooseflightCalculator

./: 747.tsv  CMakeLists.txt  README.md  Tempest UAS & B747 Airfoil and CFD Data for ASEN 2004 Aero Lab (Spr22).xlsx  airplane.cpp  airplane.h  glider_math.c  glider_math.h  main.cpp  nrutil.c  nrutil.h  tempest.tsv  test.c
